Request urgency may ignore fetchPriority and supportsPriority in two scenarios
Categories
(Core :: Networking, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox132 | --- | fixed |
People
(Reporter: acreskey, Assigned: valentin)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
We call nsHttpHandler::UrgencyFromCoSFlags(uint32_t cos, int32_t aSupportsPriority) to calculate the urgency for a request, using class of service and provided nsiSupportsPriority (which also reflects fetchPriority).
However in two scenarios we don't pass in the aSupportsPriority
field, and so only calculate urgency from class of service:
Http2StreamBase::UpdatePriority
These may affect the urgency on PRIORITY_UPDATE frames?
Reporter | ||
Updated•2 months ago
|
Assignee | ||
Updated•2 months ago
|
Reporter | ||
Comment 1•2 months ago
|
||
This looks to be related to deprioritizing tabs as they are backgrounded/foregrounded.
Assignee | ||
Comment 2•2 months ago
|
||
Comment 4•2 months ago
|
||
Backed out for causing bustages at ipc_message_utils.h.
Backout link: https://hg.mozilla.org/integration/autoland/rev/adf3c6ac684d94e7ecdf9b1d9645c49ee3c71a41
Failure log: https://treeherder.mozilla.org/logviewer?job_id=475604221&repo=autoland&lineNumber=29918
Comment 6•2 months ago
|
||
bugherder |
Description
•