Bug 1919158 - Pass nsISupportsPriority to UrgencyFromCoSFlags r=acreskey,necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D222784